--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-
+<div class="card">
+    <div class="card__content">
+        <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolorum eos in mollitia
+            odio</p>
+        <p class="card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolorum eos in mollitia
+            odio</p>
+    </div>
+</div>
 </body>
 </html>
